fixed how to spacing

--- a/styles.css
+++ b/styles.css
@@ -958,7 +958,7 @@ p {
 }
 
 .howto-image {
-  width: clamp(30rem, 40vw, 50rem);
+  width: 30rem;
 }
 
 .simplebar-track.simplebar-vertical {
@@ -985,6 +985,10 @@ body
     grid-template-rows: 1fr 0.5fr;
     margin-left: clamp(4rem, 5vw, 10rem);
     margin-right: clamp(4rem, 5vw, 10rem);
+  }
+
+  .howto-image {
+    width: 50rem;
   }
 
   .howto-image-container {
@@ -1047,6 +1051,7 @@ body
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 0.5fr 0.5fr;
     margin: 3rem auto;
+    grid-column-gap: 1rem;
   }
 
   .appstore-grid-text {
